argo-workflows-ci-example/mlops/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: github-eventsource-ingress
  namespace: argo-events
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-dns01
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  rules:
  - host: github.test.abu.pub
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: github-eventsource-svc
            port:
              name: github
  tls:
  - hosts:
    - github.test.abu.pub
    secretName: github-test-abu-pub-tls
